--- a/src/_includes/book.html
+++ b/src/_includes/book.html
@@ -15,6 +15,8 @@
       </aside>
       <div class="content">{{ content | safe }}</div>
     </div>
-    <footer></footer>
+    <footer>
+      Reviewed by Thomas Rigby, {{ date }}
+    </footer>
   </article>
 {% endblock %}
