--- a/src/_includes/card.html
+++ b/src/_includes/card.html
@@ -1,7 +1,7 @@
 <article style="border: 1px solid rgba(255,255,255,0.15); border-radius: 1ch; background-color: rgba(255,255,255,0.0625); overflow: hidden; box-shadow: 1ch 1ch 1px rgba(0,0,0,0.3);">
   <div style="padding: 2em;">
     {{ post.templateContent | safe }}
-    <p><small><time>{{ post.date | formatDate }}</time></small></p>
+    <p><small><em><time>{{ post.date | formatDate }}</time></em></small></p>
     <a href="{{ post.url }}">permalink</a>
   </div>
 </article>
