--- a/src/_includes/card.html
+++ b/src/_includes/card.html
@@ -1,6 +1,6 @@
 <article>
   {{ post.templateContent | safe }}
-  <footer>
+  <footer class="auto-grid">
     <p><small><em><time>{{ post.date | formatDate }}</time></em></small></p>
     <a href="{{ post.url }}">permalink</a>
   </footer>
