--- a/src/style.css
+++ b/src/style.css
@@ -66,3 +66,10 @@ img {
   gap: 2rem;
   grid-template-columns: repeat(auto-fit, minmax(14rem, 1fr));
 }
+
+.auto-grid {
+  --auto-grid-min-size: 16rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(var(--auto-grid-min-size), 1fr));
+  grid-gap: 1rem;
+}
