--- a/src/style.css
+++ b/src/style.css
@@ -68,8 +68,6 @@ img {
 }
 
 .auto-grid {
-  --auto-grid-min-size: 8rem;
-  display: grid;
+  display: flex;
   grid-template-columns: repeat(auto-fill, minmax(var(--auto-grid-min-size), 1fr));
-  grid-gap: 1rem;
 }
