--- a/src/_includes/card.html
+++ b/src/_includes/card.html
@@ -2,6 +2,6 @@
   {{ post.templateContent | safe }}
   <footer class="auto-grid">
     <p><small><em><time>{{ post.date | formatDate }}</time></em></small></p>
-    <a href="{{ post.url }}">permalink</a>
+    <a style="margin-inline-start: auto;" href="{{ post.url }}">permalink</a>
   </footer>
 </article>
