--- a/src/style.css
+++ b/src/style.css
@@ -69,5 +69,6 @@ img {
 
 .auto-grid {
   display: flex;
-  grid-template-columns: repeat(auto-fill, minmax(var(--auto-grid-min-size), 1fr));
+  align-items: center;
+  justify-content: space-between;
 }
