--- a/src/style.css
+++ b/src/style.css
@@ -62,11 +62,14 @@ img {
 }
 
 .card-grid {
-  display: grid;
-  gap: 2rem;
-  grid-template-columns: repeat(auto-fit, minmax(14rem, 1fr));
+  display: flex;
+  justify-content: center;
 }
-
+.card {
+  flex-basis: 24rem;
+  flex-shrink: 1;
+  flex-grow: 0;
+}
 .auto-grid {
   display: flex;
   align-items: center;
