--- a/src/_includes/card.html
+++ b/src/_includes/card.html
@@ -1,4 +1,4 @@
-<article>
+<article class="card">
   {{ post.templateContent | safe }}
   <footer class="auto-grid">
     <p><small><em><time>{{ post.date | formatDate }}</time></em></small></p>
