--- a/src/style.css
+++ b/src/style.css
@@ -70,6 +70,9 @@ img {
   flex-shrink: 1;
   flex-grow: 0;
 }
+.card+.card {
+  margin-top: 5rem;
+}
 .auto-grid {
   display: flex;
   align-items: center;
