--- a/src/_includes/base.html
+++ b/src/_includes/base.html
@@ -28,7 +28,7 @@
   <footer class="site-footer">
     <div class="wrapper">
       <small class="colophon">&copy; 2022 <a href="https://thomasrigby.com">Thomas Rigby</a></small>
-      <a href="mailto:webmaster@rigby.cx">Contact webmaster</a>
+      <small>&hellip;</small>
     </div>
   </footer>
 </body>
