--- a/src/_includes/base.html
+++ b/src/_includes/base.html
@@ -27,7 +27,7 @@
   </main>
   <footer class="site-footer">
     <div class="wrapper">
-      <small class="colophon">&copy; 2015 - 2022 <a href="https://thomasrigby.com">Thomas Rigby</a></small>
+      <small class="colophon">&copy; 2015 - {% year %} <a href="https://thomasrigby.com">Thomas Rigby</a></small>
       <small>&hellip;</small>
     </div>
   </footer>
